# recsa-cli-example

./: LICENSE  README.md  pyproject.toml
M2L4/assembly_enumeration/: input.yaml
M2L4/assembly_enumeration/wip/: resolved_sym_ops.yaml  wip1_bondsets.yaml  wip3_unique_assemblies.yaml
M2L4/assembly_list_concatenation/: assemblies1.yaml  assemblies2.yaml  component_kinds.yaml  output.yaml
M2L4/reaction_classification/: classification_rule1.yaml  classification_rule2.yaml  classification_rule3.yaml  classification_rule4.yaml  reactions.csv
M2L4/reaction_exploration/: config_XtoL.yaml  output.csv  output_LtoX.csv
M4L4/assembly_enumeration/: input.yaml  output.yaml
M4L4/assembly_list_concatenation/: assemblies1.yaml  component_kinds.yaml
M4L4/reaction_exploration/: assemblies.yaml  output.csv
