[tool.poetry]
name = "recsa-cli-example"
version = "0.1.0"
description = "Example input and output files for RECSA CLI"
authors = ["neji-craftsman <142223934+neji-craftsman@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
recsa = "^0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
